# sentinelai

./: README.md  pyproject.toml
scripts/: test_chain.py  test_graph.py  test_multi_agent.py
src/sentinelai/: __init__.py
src/sentinelai/application/services/: code_analyzer.py  report_writer.py  vuln_scanner.py
src/sentinelai/domain/entities/: __init__.py  finding.py  report.py  scan_request.py
src/sentinelai/domain/ports/: llm_port.py
src/sentinelai/infrastructure/graph/: __init__.py  builder.py  nodes.py  state.py
src/sentinelai/infrastructure/llm/: ollama_adapter.py
