[project]
name = "sentinelai"
version = "0.1.0"
description = "Multi-Agent Security Assistant powered by LangGraph + Ollama"
readme = "README.md"
authors = [{ name = "Rafael Toledo", email = "toledorafael304@gmail.com" }]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.7",
    "pydantic>=2.13.4",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
